[gd_scene load_steps=13 format=2]

[ext_resource path="res://Alibaba-PuHuiTi-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://font40.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://font20.tres" type="DynamicFont" id=4]
[ext_resource path="res://software_source.tres" type="ButtonGroup" id=5]
[ext_resource path="res://leftBar.tres" type="ButtonGroup" id=6]
[ext_resource path="res://DownLoadPage.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.517647, 0.705882, 0.807843, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0862745, 0.513726, 0.745098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0862745, 0.513726, 0.745098, 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="MainPanel" type="Panel" parent="."]
margin_left = 129.0
margin_top = 66.0
margin_right = 883.0
margin_bottom = 542.0

[node name="tip_choose" type="Label" parent="MainPanel"]
visible = false
margin_left = 263.0
margin_top = 5.0
margin_right = 443.0
margin_bottom = 459.0
custom_fonts/font = SubResource( 2 )
text = "请在右边选择软件源"
valign = 1

[node name="she_qu" type="Control" parent="MainPanel"]
visible = false
margin_left = -129.0
margin_top = -66.0
margin_right = -89.0
margin_bottom = -26.0

[node name="GodoterCN" type="ColorRect" parent="MainPanel/she_qu"]
margin_left = 151.0
margin_top = 77.0
margin_right = 279.0
margin_bottom = 205.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
color = Color( 0.329412, 0.541176, 0.870588, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Link" type="Label" parent="MainPanel/she_qu/GodoterCN"]
margin_left = 1.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 4 )
text = "Godoter.cn"
align = 1
valign = 1

[node name="Godott" type="ColorRect" parent="MainPanel/she_qu"]
margin_left = 297.0
margin_top = 77.0
margin_right = 425.0
margin_bottom = 205.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
color = Color( 0.329412, 0.541176, 0.870588, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Link" type="Label" parent="MainPanel/she_qu/Godott"]
margin_left = 1.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 4 )
text = "godott.com"
align = 1
valign = 1

[node name="GodotPro" type="ColorRect" parent="MainPanel/she_qu"]
margin_left = 439.0
margin_top = 77.0
margin_right = 567.0
margin_bottom = 205.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( 64, 64 )
color = Color( 0.329412, 0.541176, 0.870588, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Link" type="Label" parent="MainPanel/she_qu/GodotPro"]
margin_left = 1.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 4 )
text = "godot.pro"
align = 1
valign = 1

[node name="AddEditor" type="Button" parent="MainPanel"]
margin_left = 617.0
margin_top = 433.0
margin_right = 749.0
margin_bottom = 467.0
custom_fonts/font = ExtResource( 4 )
text = "添加本地版本"

[node name="Download" type="Button" parent="MainPanel"]
visible = false
margin_left = 617.0
margin_top = 433.0
margin_right = 749.0
margin_bottom = 467.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "下载编辑器"

[node name="DownLoadPage" type="ScrollContainer" parent="MainPanel"]
margin_top = 5.0
margin_right = 617.0
margin_bottom = 467.0
scroll_horizontal_enabled = false
script = ExtResource( 8 )

[node name="Root" type="VBoxContainer" parent="MainPanel/DownLoadPage"]

[node name="EditorManage" type="Button" parent="."]
margin_left = 8.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 6 )
text = "编辑器管理"

[node name="engine" type="Button" parent="."]
margin_left = 8.0
margin_top = 176.0
margin_right = 120.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 1 )
text = "引擎官网"

[node name="GodotDataButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 214.0
margin_right = 120.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 1 )
text = "Godot数据"

[node name="ThirdPartySheQu" type="Button" parent="."]
margin_left = 4.0
margin_top = 125.0
margin_right = 116.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 6 )
text = "第三方社区"

[node name="Label" type="Label" parent="."]
margin_right = 1025.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "GodotDashBoard"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ClickDownTween" type="Tween" parent="."]

[node name="ClickUPTween" type="Tween" parent="."]

[node name="repo_source" type="VBoxContainer" parent="."]
visible = false
margin_left = 878.0
margin_top = 138.0
margin_right = 1017.0
margin_bottom = 516.0
__meta__ = {
"_editor_description_": "软件源
这里暂时还没有实现rest API"
}

[node name="offical" type="Button" parent="repo_source"]
margin_right = 139.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 5 )
text = "官方网站"

[node name="itch" type="Button" parent="repo_source"]
margin_top = 38.0
margin_right = 139.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 5 )
text = "itch.io"

[node name="github" type="Button" parent="repo_source"]
margin_top = 76.0
margin_right = 139.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 5 )
text = "官方github"

[node name="gitee" type="Button" parent="repo_source"]
margin_top = 114.0
margin_right = 139.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 5 )
text = "gitee镜像"

[node name="tmux" type="Button" parent="repo_source"]
margin_top = 152.0
margin_right = 139.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 5 )
text = "官方tmux存档"

[node name="GodotSDK" type="Button" parent="repo_source"]
margin_top = 190.0
margin_right = 139.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
toggle_mode = true
group = ExtResource( 5 )
text = "GodotSDK"

[node name="Label2" type="Label" parent="."]
margin_left = 883.0
margin_top = 71.0
margin_right = 1017.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 4 )
text = "软件源："
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
